--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <div id="clockDisplay"></div>
         <div class="header-text">
-            <p>Java Dev.</p>
+            <p>Aspiring Java Dev.</p>
             <h1>Hi, I'm <span>Arvee </span><br>Durante Odon</h1>
         </div>        
     </div>
