--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,8 @@
                 <p><i class="fa-solid fa-phone"></i>0951 487 2197</p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/ArveeReed"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-solid fa-info"></i></a>
+                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="https://m.me/ArveeReed"><i class="fa-brands fa-facebook-messenger"></i></a>
                 </div>
                 <a href="#" download class="btn btn2">Download Information</a>
