--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal Information">
+    <meta name="keywords" content="personal, information, personal information, resume">
+    <meta name="author" content="Arvee Durante Odon">
     <title>Arvee D. Odon</title>
     <link rel="shortcut icon" type="images" href="images/an.png">
     <link rel="stylesheet" href="style.css">
